# rgb-controller

./: .gitignore  README.md
app/: eas.json  install-android.txt  install-ios.txt  package.json
app-desktop/: package.json
app-desktop/src/: index.html  main.js  preload.js  renderer.js  styles.css
app/app/: [...missing].tsx
app/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
app/components/: Button.tsx  Layout.tsx  TopBar.tsx
app/lib/: storage.ts
cli/: Cargo.toml  rustfmt.toml
cli/src/: config.rs  main.rs  rgb_commander.rs  utils.rs
esp/src/: main.cpp
pcb/: RGB-LED-controller-cache.lib  RGB-LED-controller.bak  RGB-LED-controller.kicad_pcb  RGB-LED-controller.kicad_pcb-bak  RGB-LED-controller.net  RGB-LED-controller.pro  RGB-LED-controller.sch  RGB-LED-controller.sch-bak  components.txt  rgb-led-gerber.rar
pcb/rgb-led-gerber/: RGB-LED-controller-B.Cu.gbr  RGB-LED-controller-B.Mask.gbr  RGB-LED-controller-B.SilkS.gbr  RGB-LED-controller-Edge.Cuts.gbr  RGB-LED-controller-F.Cu.gbr  RGB-LED-controller-F.Mask.gbr  RGB-LED-controller-F.SilkS.gbr  RGB-LED-controller.drl
rgb-controller/: app.json  package.json
