[package]
name = "rgb"
version = "0.1.0"
authors = ["primozpadar <primoz.padar1@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories-next = "2.0.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
thiserror = "1.0.59"
